[build-system]
requires = ["setuptools>=69", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "dsqusss"
version = "0.0.1"
description = "dsqusss Python package"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Sanjog Sigdel" }
]
dependencies = []

[project.urls]
Homepage = "https://github.com/sigdelsanjog/dsqus"
Repository = "https://github.com/sigdelsanjog/dsqus"

[tool.setuptools]
package-dir = {"" = "dsqus"}

[tool.setuptools.packages.find]
where = ["dsqus"]
