[build-system]
requires = ["setuptools>=69", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "dsqus"
version = "0.0.1"
description = "dsqusss Python package"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Sanjog Sigdel" }
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "pandas>=2.2",
  "openpyxl>=3.1",
]

[project.urls]
Homepage = "https://github.com/sigdelsanjog/dsqus"
Repository = "https://github.com/sigdelsanjog/dsqus"

[tool.setuptools]
package-dir = {"" = "dsqus"}

[tool.setuptools.packages.find]
where = ["dsqus"]
