[build-system]
requires = ["setuptools>=69", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "dsqus"
version = "0.0.1"
description = "dsqusss Python package"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Sanjog Sigdel" }
]
dependencies = [
  "pandas>=2.2",
  "openpyxl>=3.1",
]

[project.urls]
Homepage = "https://github.com/sigdelsanjog/dsqus"
Repository = "https://github.com/sigdelsanjog/dsqus"

[tool.setuptools.packages.find]
include = ["dsqus*"]
